@@ -55,6 +55,32 @@ class VAE(BaseThresholder):
 
        thresh_ : threshold value that separates inliers from outliers
 
+       Examples
+       --------
+       The effects of randomness can affect the thresholder's output perfomance 
+       signicantly. Therefore, to alleviate the effects of randomness on the 
+       thresholder a combined model can be used with different random_state values.
+       E.g.
+
+       .. code:: python
+
+            # train the KNN detector
+            from pyod.models.knn import KNN
+            from pythresh.thresholds.comb import COMB
+            from pythresh.thresholds.vae import VAE
+
+            clf = KNN()
+            clf.fit(X_train)
+
+            # get outlier scores
+            decision_scores = clf.decision_scores_  # raw outlier scores
+
+            # get outlier labels with combined model
+            thres = COMB(thresholders = [VAE(random_state=1234), 
+            VAE(random_state=42), VAE(random_state=9685), 
+            VAE(random_state=111222)])
+            labels = thres.eval(decision_scores)
+
     """
 
     def __init__(self, verbose=False, device='cpu', latent_dims='auto',
