@@ -49,6 +49,32 @@ class WIND(BaseThresholder):
        must have different region labels. Since multiple intersection regions may exist. The
        threshold between inliers and outliers is taken as the mean intersection point.
 
+       Examples
+       --------
+       The effects of randomness can affect the thresholder's output perfomance 
+       signicantly. Therefore, to alleviate the effects of randomness on the 
+       thresholder a combined model can be used with different random_state values.
+       E.g.
+
+       .. code:: python
+
+            # train the KNN detector
+            from pyod.models.knn import KNN
+            from pythresh.thresholds.comb import COMB
+            from pythresh.thresholds.wind import WIND
+
+            clf = KNN()
+            clf.fit(X_train)
+
+            # get outlier scores
+            decision_scores = clf.decision_scores_  # raw outlier scores
+
+            # get outlier labels with combined model
+            thres = COMB(thresholders = [WIND(random_state=1234), 
+            WIND(random_state=42), WIND(random_state=9685), 
+            WIND(random_state=111222)])
+            labels = thres.eval(decision_scores)
+
     """
 
     def __init__(self, random_state=1234):
